# capstone-2025-13

./: .gitignore  API.md  App.tsx  Dockerfile  README.md  app.json  babel.config.js  build.gradle.kts  compose.yaml  index.html  metro.config.js  openapi.json  package-lock.json  package.json  settings.gradle.kts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  code_refactoring.yml  config.yml  documentation_improvement.yml  feature_request.yml  help_needed.yml
Frontend/: .gitignore  build.gradle.kts
Frontend/src/: .gitignore  API.ts  App.tsx  app.config.ts  app.json  babel.config.js  credentials.json  eas.json  index.ts  metro.config.js  package-lock.json  package.json  tsconfig.json
Frontend/src/API/: IntegrityAPI.ts  QuestAPI.ts  axios.ts  calendarAPI.ts  common.ts  contextAPI.ts  contextAPI.tsx  diagnosisAPI.ts  helpcallAPI.ts  potAPI.ts  recordAPI.ts  signAPI.ts  topicAPI.ts  (+1 more)
Frontend/src/android/app/src/main/cpp/: CMakeLists.txt
Frontend/src/android/app/src/main/cpp/plugins/: FacePreprocessingNative.cpp
android/: build.gradle  settings.gradle
android/app/: build.gradle
components/: FaceDetectionCamera.tsx
hooks/: useEmotionModel.tsx
ios/: Podfile
ios/FaceDetectorApp/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/FaceDetectorApp.xcodeproj/: project.pbxproj
ios/FaceDetectorAppTests/: FaceDetectorAppTests.m
python/: .gitignore  generate_sql.py  main.py  utf8_convert.py
screens/: QuestEmotion.tsx
utils/: CapturePhoto.tsx  EmotionModelRun.tsx  EmotionPreprocess.tsx
utils/emotion_quests/: Happy5Sec.tsx
(+364 files in other folders)
